cdk.out/test.template.json
{
 "Resources": {
  "TestEcRedisVpc60416479": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.248.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/Resource"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet1SubnetD3486A51": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.248.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1/Subnet"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet1RouteTableD1A0B285": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1/RouteTable"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet1RouteTableAssociation0168D98A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet1RouteTableD1A0B285"
    },
    "SubnetId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet1SubnetD3486A51"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1/RouteTableAssociation"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet1DefaultRouteB4897AAE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet1RouteTableD1A0B285"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "TestEcRedisVpcIGWC551CA6C"
    }
   },
   "DependsOn": [
    "TestEcRedisVpcVPCGWA4D55058"
   ],
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet1/DefaultRoute"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet2Subnet155E3D5C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.248.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "PublicSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2/Subnet"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet2RouteTableF3F7687B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2/RouteTable"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet2RouteTableAssociation87C3373E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet2RouteTableF3F7687B"
    },
    "SubnetId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet2Subnet155E3D5C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2/RouteTableAssociation"
   }
  },
  "TestEcRedisVpcPublicSubnetSubnet2DefaultRoute78D66912": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcPublicSubnetSubnet2RouteTableF3F7687B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "TestEcRedisVpcIGWC551CA6C"
    }
   },
   "DependsOn": [
    "TestEcRedisVpcVPCGWA4D55058"
   ],
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/PublicSubnetSubnet2/DefaultRoute"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet1SubnetDDDCAF54": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.248.64.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet1/Subnet"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet1RouteTableD6BB5977": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet1/RouteTable"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet1RouteTableAssociationDF2F2D79": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcIsolatedSubnetSubnet1RouteTableD6BB5977"
    },
    "SubnetId": {
     "Ref": "TestEcRedisVpcIsolatedSubnetSubnet1SubnetDDDCAF54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet1/RouteTableAssociation"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet2Subnet67AC4DD6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.248.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "IsolatedSubnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet2/Subnet"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet2RouteTableFFD42749": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet2/RouteTable"
   }
  },
  "TestEcRedisVpcIsolatedSubnetSubnet2RouteTableAssociationD7096D35": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "TestEcRedisVpcIsolatedSubnetSubnet2RouteTableFFD42749"
    },
    "SubnetId": {
     "Ref": "TestEcRedisVpcIsolatedSubnetSubnet2Subnet67AC4DD6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IsolatedSubnetSubnet2/RouteTableAssociation"
   }
  },
  "TestEcRedisVpcIGWC551CA6C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "test/TestEcRedisVpc/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/IGW"
   }
  },
  "TestEcRedisVpcVPCGWA4D55058": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    },
    "InternetGatewayId": {
     "Ref": "TestEcRedisVpcIGWC551CA6C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpc/Vpc/VPCGW"
   }
  },
  "TestEcRedisVpcSgsSecurityGroupF8169D7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "test/TestEcRedisVpcSgs/SecurityGroup",
    "GroupName": "common",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Postgres",
      "FromPort": 6379,
      "IpProtocol": "tcp",
      "ToPort": 6379
     }
    ],
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestEcRedisVpcSgs/SecurityGroup/Resource"
   }
  },
  "TestecRedisTestecRedisredissg40999A83": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "test/TestecRedis/TestecRedisredis-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "TestEcRedisVpc60416479"
    }
   },
   "Metadata": {
    "aws:cdk:path": "test/TestecRedis/TestecRedisredis-sg/Resource"
   }
  },
  "TestecRedisTestecRedisredissgfromtestTestecRedisrediscachesg03508EAD96379CCB427B5": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "from testTestecRedisrediscachesg03508EAD9:6379",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "TestecRedisTestecRedisredissg40999A83",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "TestEcRedisVpcSgsSecurityGroupF8169D7D",
      "GroupId"
     ]
    },
    "ToPort": 6379
   },
   "Metadata": {
    "aws:cdk:path": "test/TestecRedis/TestecRedisredis-sg/from testTestecRedisrediscachesg03508EAD9:6379"
   }
  },
  "TestecRedisredissubnetgroup1AEF22BF": {
   "Type": "AWS::ElastiCache::SubnetGroup",
   "Properties": {
    "Description": "isolated subnet group",
    "SubnetIds": [
     {
      "Ref": "TestEcRedisVpcIsolatedSubnetSubnet1SubnetDDDCAF54"
     },
     {
      "Ref": "TestEcRedisVpcIsolatedSubnetSubnet2Subnet67AC4DD6"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "test/TestecRedis/redis-subnet-group"
   }
  },
  "TestecRediselasticachesecret3BFBB8D2": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludeCharacters": "/\"@%*()[]{}~|+?,'\\_=`;:",
     "IncludeSpace": false
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "test/TestecRedis/elasticache-secret/Resource"
   }
  },
  "TestecRedisrediscluster13122AE5": {
   "Type": "AWS::ElastiCache::ReplicationGroup",
   "Properties": {
    "ReplicationGroupDescription": "redis cluster",
    "AtRestEncryptionEnabled": true,
    "AuthToken": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "TestecRediselasticachesecret3BFBB8D2"
       },
       ":SecretString:::}}"
      ]
     ]
    },
    "AutoMinorVersionUpgrade": true,
    "CacheNodeType": "cache.t3.micro",
    "CacheSubnetGroupName": {
     "Ref": "TestecRedisredissubnetgroup1AEF22BF"
    },
    "Engine": "redis",
    "MultiAZEnabled": true,
    "NumNodeGroups": 1,
    "Port": 6379,
    "ReplicasPerNodeGroup": 1,
    "ReplicationGroupId": "test-ec-redis",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "TestecRedisTestecRedisredissg40999A83",
       "GroupId"
      ]
     }
    ],
    "TransitEncryptionEnabled": true
   },
   "Metadata": {
    "aws:cdk:path": "test/TestecRedis/redis-cluster"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32QQW/CMAyFf8vuaTbQ2B31gDhRtRPXKXU9ZmiTKnZAqMp/XyhVu9NOef7kvGd7rTfv+u3F3DiD5pK1VOuhEgMXldDXgLDWw7EHlX/bY5GrItQtQRVqi/JgiypdEPw0dYsLX9iW2QEZIWfnZlV4uhrBxWNvBX3Su0Rv5j6FTtVW0lg/HVpRFULwJPedd6Ef4/4Fe3vyyBwVtoaFINmgHuYp508l9mm5cciRRcUIHoU7Y80JfbrMWE8BScWoSmQXPIxbH4L04XmNPzR3tqGHaVTWNajP/HpdfejVJt39zESZD1aoQ10+318OMOYxkwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "test/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "TestEcRedisVpcVpcId8714663E": {
   "Description": "TestEcRedisVpc-vpc-id",
   "Value": {
    "Ref": "TestEcRedisVpc60416479"
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
